--- a/layout/resetStyles.css
+++ b/layout/resetStyles.css
@@ -5,3 +5,9 @@ body {
   background: url("../public/images/galaxy.png");
   font-family: "Roboto", sans-serif;
 }
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
